--- a/backend/package.json
+++ b/backend/package.json
@@ -22,11 +22,16 @@
     "express": "^5.2.1",
     "express-rate-limit": "^7.5.0",
     "express-validator": "^7.3.1",
+    "googleapis": "^169.0.0",
     "helmet": "^7.1.0",
     "joi": "^17.12.2",
     "jsonwebtoken": "^9.0.3",
     "mongoose": "^9.0.2",
     "morgan": "^1.10.0",
+    "nodemailer": "^7.0.12",
+    "passport": "^0.7.0",
+    "passport-github2": "^0.1.12",
+    "passport-google-oauth20": "^2.0.0",
     "swagger-jsdoc": "^6.2.8",
     "swagger-ui-express": "^5.0.1",
     "uuid": "^9.0.1",
