feat: integrate multer memory storage with ImageKit upload flow and create user module

--- a/backend/package.json
+++ b/backend/package.json
@@ -15,6 +15,7 @@
     "build": "echo \"No build step for Node backend\""
   },
   "dependencies": {
+    "@imagekit/nodejs": "^7.2.2",
     "bcrypt": "^5.1.1",
     "cookie-parser": "^1.4.7",
     "cors": "^2.8.5",
@@ -25,10 +26,12 @@
     "express-validator": "^7.3.1",
     "googleapis": "^169.0.0",
     "helmet": "^7.1.0",
+    "imagekit": "^6.0.0",
     "joi": "^17.12.2",
     "jsonwebtoken": "^9.0.3",
     "mongoose": "^9.0.2",
     "morgan": "^1.10.0",
+    "multer": "^2.0.2",
     "nodemailer": "^7.0.12",
     "passport": "^0.7.0",
     "passport-github2": "^0.1.12",
